--- a/veterinaria/app/templates/referencias.html
+++ b/veterinaria/app/templates/referencias.html
@@ -11,7 +11,8 @@
     <!-- Referencia Iconos de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <!-- Referencia JavaScript -->
-    <script src="{% static 'js/app.js' %}"></script>
+    <script src="{% static 'js/confirmar.js' %}"></script>
+    <script src="{% static 'js/cotizar.js' %}"></script>
 </head>
 <body>
     
