mensajes de inicio, cierre y contra incorrecta. no dejar que acceda a servicios o citas si no esta loggeada una sesion, los redirecciona al login

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -376,6 +376,8 @@
         © Elaborado por Equipo 1
     </footer>
 
+    {% include 'alertas.html' %}
+    {% block content %}{% endblock %}
 </body>
 
 </html>
