--- a/veterinaria/app/templates/citas.html
+++ b/veterinaria/app/templates/citas.html
@@ -164,6 +164,12 @@
             </div>
         </div>
     </main>
+
+    <body>
+        {% include 'alertas.html' %}
+        {% block content %}{% endblock %}
+    </body>
+
 </body>
 
 </html>
