--- a/veterinaria/app/templates/servicios.html
+++ b/veterinaria/app/templates/servicios.html
@@ -28,20 +28,20 @@
 
                             <div class="mb-3">
                                 <label class="form-label">Nombre</label>
-                                <input type="text" name="nombre" class="form-control" pattern="[A-Za-z\s]+" maxlength="100" required
-                                    value="{{ servicio.nombre|default_if_none:'' }}">
+                                <input type="text" name="nombre" class="form-control" pattern="[A-Za-z\s]+"
+                                    maxlength="100" required value="{{ servicio.nombre|default_if_none:'' }}">
                             </div>
 
                             <div class="mb-3">
                                 <label class="form-label">Precio</label>
-                                <input type="number" step="0.01" min="0" name="precio" pattern="^\d+(\.\d{1,2})?$" class="form-control" required
-                                    value="{{ servicio.precio|default_if_none:'' }}">
+                                <input type="number" step="0.01" min="0" name="precio" pattern="^\d+(\.\d{1,2})?$"
+                                    class="form-control" required value="{{ servicio.precio|default_if_none:'' }}">
                             </div>
 
                             <div class="mb-3">
                                 <label class="form-label">Descripción</label>
-                                <textarea name="descripcion" rows="4"
-                                    class="form-control" maxlength="250">{{ servicio.descripcion }}</textarea>
+                                <textarea name="descripcion" rows="4" class="form-control"
+                                    maxlength="250">{{ servicio.descripcion }}</textarea>
                             </div>
 
                             <div class="d-flex gap-2">
@@ -107,12 +107,17 @@
                                 {% endfor %}
                             </tbody>
                         </table>
-
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <body>
+        {% include 'alertas.html' %}
+        {% block content %}{% endblock %}
+    </body>
+
 </body>
 
 </html>
