agergué la parte de nosotros del index

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -18,7 +18,7 @@
     <!-- Sección principal con fondo completo -->
     <section class="hero-section">
         <div class="overlay d-flex flex-column justify-content-center align-items-center text-center">
-            <h1 class="bienvenida">BIENVENIDO A “NOMBRE”</h1>
+            <h1 class="bienvenida">Bienvenido a PetCare</h1>
         </div>
     </section>
 
@@ -28,7 +28,7 @@
 
             <!-- Columna izquierda: Imagen circular -->
             <div class="col-md-5 text-center mb-4 mb-md-0">
-                <img src="{% static 'img/img-default.webp' %}" alt="Paisaje"
+                <img src="{% static 'img/nosotros_vet.avif' %}" alt="Paisaje"
                     class="img-fluid rounded-circle border border-dark"
                     style="width: 300px; height: 300px; object-fit: cover;">
             </div>
@@ -41,22 +41,22 @@
                         <div class="col-md-6">
                             <h5 class="fw-bold text-center">MISIÓN</h5>
                             <p class="text-justify">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                "Brindar un servicio veterinario integral de la más alta calidad, 
+                                centrado en la salud y el bienestar de las mascotas. Nos comprometemos 
+                                a tratar a cada paciente con profesionalismo, ética y profunda compasión, 
+                                reconociendo que son miembros valiosos de sus familias y merecen el mejor 
+                                cuidado posible."
                             </p>
                         </div>
                         <div class="col-md-6">
                             <h5 class="fw-bold text-center">VISIÓN</h5>
                             <p class="text-justify">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
+                                "Ser la clínica veterinaria de referencia en nuestra comunidad, reconocida 
+                                por nuestra excelencia médica, innovación constante y, sobre todo, por el 
+                                vínculo de confianza inquebrantable que construimos con nuestros clientes.
+                                 Aspiramos a ser un pilar para el bienestar animal, promoviendo una cultura 
+                                 de tenencia responsable para que más mascotas vivan vidas largas, plenas 
+                                 y felices."
                         </div>
                     </div>
                 </div>
