--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -25,41 +25,36 @@
     <!-- Nosotros -->
     <section class="container my-5">
         <div class="row align-items-center justify-content-center">
-
-            <!-- Columna izquierda: Imagen circular -->
             <div class="col-md-5 text-center mb-4 mb-md-0">
-                <img src="{% static 'img/nosotros_vet.avif' %}" alt="Paisaje"
+                <img src="{% static 'img/nosotros_vet.avif' %}" alt="Instalaciones de la veterinaria"
                     class="img-fluid rounded-circle border border-dark"
-                    style="width: 300px; height: 300px; object-fit: cover;">
+                    style="width: 400px; height: 400px; object-fit: cover;">
             </div>
-
-            <!-- Columna derecha: Cuadro de texto -->
             <div class="col-md-6">
-                <div class="p-4 border border-dark rounded">
-                    <h3 class="text-center mb-4">NOSOTROS</h3>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5 class="fw-bold text-center">MISIÓN</h5>
-                            <p class="text-justify">
-                                "Brindar un servicio veterinario integral de la más alta calidad, 
-                                centrado en la salud y el bienestar de las mascotas. Nos comprometemos 
-                                a tratar a cada paciente con profesionalismo, ética y profunda compasión, 
-                                reconociendo que son miembros valiosos de sus familias y merecen el mejor 
-                                cuidado posible."
-                            </p>
-                        </div>
-                        <div class="col-md-6">
-                            <h5 class="fw-bold text-center">VISIÓN</h5>
-                            <p class="text-justify">
-                                "Ser la clínica veterinaria de referencia en nuestra comunidad, reconocida 
-                                por nuestra excelencia médica, innovación constante y, sobre todo, por el 
-                                vínculo de confianza inquebrantable que construimos con nuestros clientes.
-                                 Aspiramos a ser un pilar para el bienestar animal, promoviendo una cultura 
-                                 de tenencia responsable para que más mascotas vivan vidas largas, plenas 
-                                 y felices."
-                        </div>
-                    </div>
+                <h3 class="text-center mb-4">NOSOTROS</h3>
+                <div class="tarjeta-nosotros mb-4">
+                    <h5 class="fw-bold">MISIÓN</h5>
+                    <p class="text-justify">
+                        "Brindar un servicio veterinario integral de la más alta calidad, 
+                        centrado en la salud y el bienestar de las mascotas. Nos comprometemos 
+                        a tratar a cada paciente con profesionalismo, ética y profunda compasión, 
+                        reconociendo que son miembros valiosos de sus familias y merecen el mejor 
+                        cuidado posible."
+                    </p>
                 </div>
+
+                <div class="tarjeta-nosotros">
+                    <h5 class="fw-bold">VISIÓN</h5>
+                    <p class="text-justify">
+                        "Ser la clínica veterinaria de referencia en nuestra comunidad, reconocida 
+                        por nuestra excelencia médica, innovación constante y, sobre todo, por el 
+                        vínculo de confianza inquebrantable que construimos con nuestros clientes.
+                        Aspiramos a ser un pilar para el bienestar animal, promoviendo una cultura 
+                        de tenencia responsable para que más mascotas vivan vidas largas, plenas 
+                        y felices."
+                    </p>
+                </div>
+
             </div>
         </div>
     </section>
