Agregué imagenes y testimonios personales

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -222,12 +222,12 @@
             <!-- Testimonio 1 -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card border-0 h-100">
-                    <img src="{% static 'img/img-default.webp' %}" alt="Cliente 1" class="testimonial-img mx-auto mt-2">
+                    <img src="{% static 'img/vet1.webp' %}" alt="Cliente 1" class="testimonial-img mx-auto mt-2">
                     <div class="card-body">
                         <h5 class="fw-bold">COMENTARIO</h5>
                         <p class="text-muted small px-3">
-                            Los testimonios son breves comentarios de las personas a quienes les encanta tu marca.
-                            Son una buena forma de persuadir a los clientes para que prueben tus servicios.
+                            Excelente servicio, mucha experiencia del personal, tienen estancia y buen equipo de trabajo, 
+                            atendieron excelente a mi perrita y quedó muy bien después de su accidente.
                         </p>
                         <div class="stars" aria-label="5 de 5">
                             <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
@@ -239,12 +239,12 @@
             <!-- Testimonio 2 -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card border-0 h-100">
-                    <img src="{% static 'img/img-default.webp' %}" alt="Cliente 2" class="testimonial-img mx-auto mt-2">
+                    <img src="{% static 'img/vet2.webp' %}" alt="Cliente 2" class="testimonial-img mx-auto mt-2">
                     <div class="card-body">
                         <h5 class="fw-bold">COMENTARIO</h5>
                         <p class="text-muted small px-3">
-                            Los testimonios son breves comentarios de las personas a quienes les encanta tu marca.
-                            Son una buena forma de persuadir a los clientes para que prueben tus servicios.
+                            Me ayudaron con la esterilización de mi cachorrita y todo salió de maravilla, 
+                            ella regresó a casa como si nada hubiera pasado, la recomendaría 100%.
                         </p>
                         <div class="stars" aria-label="4 de 5">
                             <span>★</span><span>★</span><span>★</span><span>★</span><span class="empty">☆</span>
@@ -256,12 +256,12 @@
             <!-- Testimonio 3 -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card border-0 h-100">
-                    <img src="{% static 'img/img-default.webp' %}" alt="Cliente 3" class="testimonial-img mx-auto mt-2">
+                    <img src="{% static 'img/vet3.webp' %}" alt="Cliente 3" class="testimonial-img mx-auto mt-2">
                     <div class="card-body">
                         <h5 class="fw-bold">COMENTARIO</h5>
                         <p class="text-muted small px-3">
-                            Los testimonios son breves comentarios de las personas a quienes les encanta tu marca.
-                            Son una buena forma de persuadir a los clientes para que prueben tus servicios.
+                            Excelente veterinaria. El personal es muy amable y profesional. Explican detalladamente los procedimientos 
+                            y las advertencias necesarias, sobre todo cuando la mascota se encuentra en una condición delicada.
                         </p>
                         <div class="stars" aria-label="5 de 5">
                             <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
