--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -256,12 +256,13 @@
             <!-- Testimonio 3 -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card border-0 h-100">
-                    <img src="{% static 'img/vet3.webp' %}" alt="Cliente 3" class="testimonial-img mx-auto mt-2">
+                    <img src="{% static 'img/vet3.jpg' %}" alt="Cliente 3" class="testimonial-img mx-auto mt-2">
                     <div class="card-body">
                         <h5 class="fw-bold">COMENTARIO</h5>
                         <p class="text-muted small px-3">
                             Excelente veterinaria. El personal es muy amable y profesional. Explican detalladamente los procedimientos 
-                            y las advertencias necesarias, sobre todo cuando la mascota se encuentra en una condición delicada.
+                            y las advertencias necesarias, sobre todo cuando la mascota se encuentra en una condición delicada, a mi me
+                            ayudaron a operar a mi gatita y todo salió como lo esperabamos, servicio 10/10.
                         </p>
                         <div class="stars" aria-label="5 de 5">
                             <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
