Agregué carrusel y modifiqué el estilo

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -114,19 +114,15 @@
             <!-- Slides -->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="4000">
-                    <img src="{% static 'img/slide1.webp' %}" class="d-block w-100 carousel-img" alt="Slide 1">
-                    <!-- Opcional: caption
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Título 1</h5><p>Descripción corta.</p>
-        </div> -->
+                    <img src="{% static 'img/carrusel1.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 1">
                 </div>
 
                 <div class="carousel-item" data-bs-interval="4000">
-                    <img src="{% static 'img/slide2.webp' %}" class="d-block w-100 carousel-img" alt="Slide 2">
+                    <img src="{% static 'img/carrusel2.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 2">
                 </div>
 
                 <div class="carousel-item" data-bs-interval="4000">
-                    <img src="{% static 'img/slide3.webp' %}" class="d-block w-100 carousel-img" alt="Slide 3">
+                    <img src="{% static 'img/carrusel3.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 3">
                 </div>
             </div>
 
