--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -109,6 +109,8 @@
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
             </div>
 
             <!-- Slides -->
@@ -123,6 +125,14 @@
 
                 <div class="carousel-item" data-bs-interval="4000">
                     <img src="{% static 'img/carrusel3.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 3">
+                </div>
+                
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="{% static 'img/carrusel4.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 4">
+                </div>
+
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="{% static 'img/carrusel5.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 5">
                 </div>
             </div>
 
