cambie referencia de foto de banner a css en vez de estar en el html

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -16,9 +16,7 @@
     {% include 'navbar.html' %}
 
     <!-- Sección principal con fondo completo -->
-    <section class="hero-section"
-        style="background-image: url({% static 'img/banner_bienvenida.png' %});">
-    </section>
+    <section class="hero-section"></section>
 
     <!-- Nosotros -->
     <section class="container my-5">
