--- a/veterinaria/app/static/css/style.css
+++ b/veterinaria/app/static/css/style.css
@@ -13,10 +13,10 @@ body {
 .hero-section {
   width: 100vw;
   height: 100vh;
+  background-image: url("../img/banner_bienvenida.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  position: relative;
 }
 
 .overlay {
