icono de pagina

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -10,6 +10,8 @@
     {% include 'referencias.html' %}
     <!-- Referencia a CSS página principal -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Icono de página -->
+    <link rel="icon" href="{% static 'img/logo.png' %}" type="image/png">
 </head>
 
 <body>
