--- a/veterinaria/app/static/css/style.css
+++ b/veterinaria/app/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html, body {
   overflow-x: hidden;
 }
@@ -6,14 +8,14 @@ html, body {
 body {
   margin: 0;
   padding: 0;
-  
+  font-family: "Poppins", sans-serif !important;
 }
 
 /* Hero a pantalla completa */
 .hero-section {
   width: 100vw;
   height: 100vh;
-  background-image: url("../img/banner_bienvenida.png");
+  background-image: url("../img/banner_bienvenida.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
